--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "multer": "^2.0.2",
     "prisma": "^6.19.2",
     "react-redux": "^9.2.0",
+    "socket.io": "^4.8.3",
     "tsx": "^4.21.0"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/socket.io": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
