--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "build": "prisma generate && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn src/server.ts"
   },
   "keywords": [],
