--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
-  "scripts": {
+ "scripts": {
     "build": "prisma generate && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js", 
     "dev": "ts-node-dev --respawn src/server.ts"
-    
   },
   "keywords": [],
   "author": "",
