--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.ts",
  "scripts": {
-    "build": "prisma generate && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/server.js", 
+    "build": "npx prisma generate && npx prisma db push && tsc",
+    "prisma:push": "npx prisma db push",
     "dev": "ts-node-dev --respawn src/server.ts"
   },
   "keywords": [],
