--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
- "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js", 
+    "start": "node dist/src/server.ts",
     "build": "npx prisma generate && npx prisma db push && tsc",
     "prisma:push": "npx prisma db push",
     "dev": "ts-node-dev --respawn src/server.ts"
