--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/src/server.js",
+    "start": "node dist/server.js",
     "build": "npx prisma generate && npx prisma db push && tsc",
     "prisma:push": "npx prisma db push",
     "dev": "ts-node-dev --respawn src/server.ts"
