feat: trying to deploy with update packange.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "npx prisma generate && npx prisma migrate deploy && tsc",
-    "start": "node dist/server.js",
-    "prisma:push": "npx prisma db push",
+    "build": "npx prisma generate && tsc",
+    "start": "npx prisma migrate deploy && node dist/server.js",
     "dev": "ts-node-dev --respawn src/server.ts"
   },
   "keywords": [],
